<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.music.model.Entry" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/radius_5dp"
        app:cardElevation="@dimen/elevation_5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:scaleType="fitXY"
                app:bindImageUrl="@{item.image[2].label}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hint_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/width_50dp"
                android:layout_margin="@dimen/margin_5dp"
                android:gravity="center_vertical"
                android:text="@string/hint_title"
                android:textSize="@dimen/text_12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/title"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/hint_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:gravity="top"
                android:text="@{item.name.label}"
                android:textSize="@dimen/text_12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hint_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/hint_artist"
                tools:text="First song " />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hint_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/width_50dp"
                android:layout_margin="@dimen/margin_5dp"
                android:gravity="center_vertical"
                android:text="@string/hint_artist"
                android:textSize="@dimen/text_12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/artist"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:text="@string/hint_artist" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/artist"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:gravity="center_vertical"
                android:text="@{item.artist.label}"
                android:textSize="@dimen/text_12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hint_artist"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintBottom_toTopOf="@+id/hint_type"
                tools:text="Jack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hint_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/width_50dp"
                android:layout_margin="@dimen/margin_5dp"
                android:gravity="center_vertical"
                android:text="@string/hint_type"
                android:textSize="@dimen/text_12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/type"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/artist"
                tools:text="@string/hint_type" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/type"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:gravity="center_vertical"
                android:text="@{item.contentType.contentType.attributes.label}"
                android:textSize="@dimen/text_12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hint_type"
                app:layout_constraintTop_toBottomOf="@+id/artist"
                tools:text="Album" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>